2009-10-27  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c:	Missing refcount on cached normalized path
	caused crashes.  [Bug 2884203].

2009-10-27  Kevin B. Kenny  <kennykb@acm.org>

	* library/clock.tcl (ParseClockScanFormat):
	Corrected a problem where [clock scan] didn't load the timezone
	soon enough when processing a time format that lacked a complete
	date. [Bug 2886852]
	* tests/clock.test (clock-66.1):
	Added a test case for the above bug.
	* library/tzdata/America/Argentina/Buenos_Aires:
	* library/tzdata/America/Argentina/Cordoba:
	* library/tzdata/America/Argentina/San_Luis:
	* library/tzdata/America/Argentina/Tucuman: 
	New DST rules for Argentina. (Olson's tzdata2009p.)
	
2009-10-24  Kevin B. Kenny  <kennykb@acm.org>

	* library/clock.tcl (ProcessPosixTimeZone): 
	Corrected a regression in the fix to [Bug 2207436] that caused
	[clock] to apply EU daylight saving time rules in the US.  Thanks
	to Karl Lehenbauer for reporting this regression.
	* tests/clock.test (clock-52.4):
	Added a regression test for the above regression.
	* library/tzdata/Asia/Dhaka:
	* library/tzdata/Asia/Karachi:
	New DST rules for Bangladesh and Pakistan. (Olson's tzdata2009o.)
	
2009-10-23  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (FlushChannel): Skip OutputProc for low-level
	0-length writes. When closing pipes which have already been closed
	not skipping leads to spurious SIG_PIPE signals. Reported by
	Mikhail Teterin <mi+thun@aldan.algebra.com>.

2009-10-21  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclPosixStr.c: [Bug 2882561]: Work around oddity on Haiku OS
	where SIGSEGV and SIGBUS are the same value.

2009-10-19  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIO.c:	Revised ReadChars and FilterInputBytes routines
	to permit reads to continue up to the string limits of Tcl values.
	Before revisions, large read attempts could panic when as little as
	half the limiting value length was reached.  [Patch 2107634]