@@ -1513,6 +1513,11 @@ test filename-16.17 {windows specific globbing} {win} {
     }
 } {ok}
 
+# Put the working directory back now that we're done with globbing in C:/
+if {[testConstraint win]} {
+    cd $oldDir
+}
+
 test filename-17.1 {windows specific special files} {testsetplatform} {
     testsetplatform win
     list [file pathtype com1] [file pathtype con] [file pathtype lpt3] \
@@ -1623,6 +1628,8 @@ test fileName-20.6 {Bug 2837800} -setup {
 } -result {}
 
 test fileName-20.7 {Bug 2806250} -setup {
+    set savewd [pwd]
+    cd [temporaryDirectory]
     set d [makeDirectory isolate]
     makeFile {} ./~test $d
 } -body {
@@ -1630,9 +1637,12 @@ test fileName-20.7 {Bug 2806250} -setup {
 } -cleanup {
     removeFile ./~test $d
     removeDirectory isolate
+    cd $savewd
 } -result 1
 
 test fileName-20.8 {Bug 2806250} -setup {
+    set savewd [pwd]
+    cd [temporaryDirectory]
     set d [makeDirectory isolate]
     makeFile {} ./~test $d
 } -body {
@@ -1640,6 +1650,7 @@ test fileName-20.8 {Bug 2806250} -setup {
 } -cleanup {
     removeFile ./~test $d
     removeDirectory isolate
+    cd $savewd
 } -result ./~test
 
 test fileName-20.9 {} -setup {
